<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_people"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_users"
        android:title="@string/action_people"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_gear"
        android:title="@string/action_settings">
    		<menu>
    		    <item
			        android:id="@+id/action_settings_all"
			        android:showAsAction="ifRoom|withText"
			        android:title="@string/action_settings_all"/>
			    <item
			        android:id="@+id/action_settings_add"
			        android:showAsAction="ifRoom|withText"
			        android:title="@string/action_settings_add"/>
			    
				<item
			        android:id="@+id/action_logout"
			        android:orderInCategory="100"
			        android:showAsAction="never"
			        android:title="@string/action_logout" />
				
				<item
			        android:id="@+id/action_privacy"
			        android:orderInCategory="100"
			        android:showAsAction="never"
			        android:title="@string/action_privacy" />
			</menu>    
    </item>
    
</menu>
